<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
        
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
        
	<groupId>com</groupId>
	<artifactId>pos</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>pos</name>
	<description>Point of Sale project for Spring Boot</description>
        
	<properties>
		<java.version>17</java.version>
	</properties>
        
	<dependencies>
            
		<dependency>
			<groupId>org.netbeans.external</groupId>
			<artifactId>AbsoluteLayout</artifactId>
			<version>RELEASE130</version>
		</dependency>
                
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.3.6</version>
		</dependency>

		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy</artifactId>
		</dependency>
                
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		 <dependency>
			  <groupId>org.eclipse.persistence</groupId>
			  <artifactId>org.eclipse.persistence.core</artifactId>
			  <version>3.0.2</version>
		 </dependency>

		 <dependency>
			  <groupId>org.eclipse.persistence</groupId>
			  <artifactId>org.eclipse.persistence.asm</artifactId>
			  <version>9.2.0</version>
		 </dependency>

		 <dependency>
			  <groupId>org.eclipse.persistence</groupId>
			  <artifactId>org.eclipse.persistence.antlr</artifactId>
			  <version>2.7.10</version>
		 </dependency>

		 <dependency>
			  <groupId>org.eclipse.persistence</groupId>
			  <artifactId>org.eclipse.persistence.jpa</artifactId>
			  <version>3.0.2</version>
		 </dependency>

		 <dependency>
			  <groupId>org.eclipse.persistence</groupId>
			  <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
			  <version>3.0.2</version>
		 </dependency>

		 <dependency>
			  <groupId>org.eclipse.persistence</groupId>
			  <artifactId>org.eclipse.persistence.moxy</artifactId>
			  <version>3.0.2</version>
		 </dependency>

		 <dependency>
			  <groupId>org.eclipse.persistence</groupId>
			  <artifactId>javax.persistence</artifactId>
			  <version>2.2.1</version>
		 </dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
        
	<repositories>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
		</repository>
	</repositories>
        
	<pluginRepositories>
            
		<pluginRepository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
                
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
		</pluginRepository>
                
	</pluginRepositories>
        
</project>
